fix: fix tooltip flickering on initial load

--- a/src/styles.styl
+++ b/src/styles.styl
@@ -3,15 +3,15 @@
   color: #fff
   pointer-events: none
   position: absolute
-  top: 200px
-  left: 200px
+  top: 50%
+  left: 50%
   box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28)
   font-family: 'Nanum Pen Script', cursive
   font-size: 24px
   padding: 4px 7px
   border-radius: 4px
   opacity: 0
-  margin-top: -52px
+  margin-top: -60px
   transform: translate(-50%)
   transition: all 0.5s
 
